# ai-pipeline-core

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .semgrepignore  .vulture_whitelist.py  CLAUDE.md  Makefile  README.md  pyproject.toml
.ai-docs/: README.md  database.md  deployment.md  documents.md  exceptions.md  llm.md  observability.md  pipeline.md  prompt_compiler.md  providers.md  replay.md  settings.md  testing.md
.claude/: settings.json
.claude/hooks/: enforce_dev_cli.py
.codex/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml  reusable-quality-checks.yml
.semgrep/: application_authoring.yml  application_structure.yml  architecture.yml  code_hygiene.yml  document_patterns.yml  parallel_execution.yml  test_authoring.yml
.subagents/: 1-core-principles-and-decision-rules.md  1-framework-principles-design-doctrine.md  2-core-authoring-model.md  2-llm-interaction-and-prompt-design.md  3-enforcement-validation-anti-patterns.md  3-framework-apis-flow-task-architecture.md  4-observability-replay-debugging.md  4-runtime-tooling-developer-workflow.md  5-empirical-evidence-bugs-case-studies.md  5-failure-modes-incidents-migration.md
ai_pipeline_core/: __init__.py  _base_exceptions.py  _codec.py  _lifecycle_events.py  _llm_core_bootstrap.py  _pydantic_base.py  _pydantic_generic.py  _token_estimates.py  exceptions.py  providers.py  settings.py  testing.py
ai_pipeline_core/_dev_extensions/: __init__.py  _test_validator.py
ai_pipeline_core/_llm_core/: __init__.py  _aipl.py  _aipl_headers.py  _config.py  _defaults.py  _response_builder.py  _routing.py  _stream.py  _strict_schema.py  _transport.py  _transport_metadata.py  _validation.py  _watchdog.py  client.py  exceptions.py  model_response.py  request.py  types.py
ai_pipeline_core/database/: __init__.py  _documents.py  _errors.py  _hydrate.py  _json_helpers.py  _memory.py  _protocol.py  _serialization.py  _types.py
ai_pipeline_core/deployment/: __init__.py  _cli.py  _contract.py  _deployment_runtime.py  _event_reconstruction.py  _helpers.py  _plan_helpers.py  _prefect.py  _pubsub.py  _resolve.py  _result_validation.py  _types.py  base.py  deploy.py  remote.py
ai_pipeline_core/documents/: __init__.py  _mime_type.py  attachment.py  document.py  exceptions.py  utils.py
ai_pipeline_core/llm/: __init__.py  _conversation_codec.py  _conversation_messages.py  _conversation_runtime.py  _engine.py  _images.py  _request_assembly.py  _request_messages.py  _substitutor.py  _tool_binding.py  _tool_schema.py  conversation.py  tools.py
ai_pipeline_core/logger/: __init__.py  _context_filter.py  _handler.py  _json_formatter.py  _logging_config.py  prefect_logging.yml
ai_pipeline_core/observability/: _laminar_sink.py  _recovery.py  _sentry_init.py  _sentry_sink.py  _tree_render.py  cli.py
ai_pipeline_core/pipeline/: __init__.py  _conversation.py  _debug.py  _document_type_metadata.py  _execution_context.py  _file_rules.py  _flow.py  _log_sink.py  _parallel.py  _runtime_sinks.py  _span_sink.py  _task.py  _traced.py  _track_span.py  _type_validation.py  _types.py  gather.py  limits.py
ai_pipeline_core/prompt_compiler/: cli.py  components.py  render.py  spec.py
ai_pipeline_core/prompt_contract/: __init__.py  _body_file.py  _class_introspection.py  _contract.py  _methodology.py  _render.py  _result.py  _tool_surface.py  _validation.py  body_file.py  cited_text.py  continuation.py  contract.py  methodology.py  render.py  result.py
ai_pipeline_core/replay/: _adapters.py  _execute.py  _experiment.py  cli.py
benchmarks/llm_matrix/: __init__.py  _expectations.py  _inventory.py  _models.py  _probes.py  _runner.py  conftest.py  test_inventory.py  test_llm_benchmark_matrix.py  test_renderer.py  test_runner_status_routing.py
docs/: README.md
docs/1-principles/: 1-foundations.md  2-authority.md  3-agent-work-and-review.md  4-framework-surface.md  5-responsibility-boundary.md  6-meaning-and-state.md  7-coding-baselines.md
docs/2-problem/: 1-mission.md  2-constraints.md  3-hard-parts.md  4-non-goals.md
docs/3-contract/: 1-what-ai-pipeline-core-is.md  2-building-an-application.md  3-guarantees.md  4-limits-and-non-promises.md  5-configuration.md  6-tools-and-the-development-loop.md  _decisions.md
examples/: manifest.yml  showcase.py  showcase_aimodel.py  showcase_database.py  showcase_prompt_compiler.py  showcase_prompt_contract.py  showcase_remote_deployment.py  showcase_replay.py  showcase_stubs.py
examples/tests/: test_smoke.py  test_static.py
sentry_sdk/: __init__.pyi
tests/: conftest.py  test_providers.py  test_retry_observability.py  test_settings.py  test_smoke.py
tests/capabilities/: __init__.py  _budget.py  _invariants.py  _model_input.py  _recorder.py  conftest.py  test_probes.py
tests/database/: test_bugs_sha256_roundtrip.py  test_clickhouse_integration.py  test_new_reader_methods.py  test_protocol.py  test_span_memory.py
tests/deployment/: conftest.py  test_build_plan.py  test_cli.py  test_database_wiring.py  test_deploy.py  test_deployment_base.py  test_event_reconstruction.py  test_event_schemas.py  test_execution_log_flush.py  test_flow_chain_validation.py  test_flow_planning.py  test_flow_retries.py  test_publisher_wiring.py  test_pubsub.py  test_pubsub_event_fields.py  test_pubsub_lifecycle.py  test_remote.py  test_remote_deployment.py  test_resume_document_loading.py  test_retry_settings.py  test_task_failure_events.py  test_verified_regressions.py
tests/documents/: test_binary_serialization.py  test_context.py  test_document_core.py  test_document_self_returns.py  test_document_serialization_metadata.py  test_document_sources.py  test_inline_summaries.py  test_typed_content.py
tests/integration/: crash_worker.py  test_crash_resilience.py  test_llm_integration.py  (+2 more)
tools/trace-inspector/: pyproject.toml
tools/trace-inspector/trace_inspector/: __init__.py  __main__.py  _api.py  _compare.py  _connect.py  _helpers.py  _load.py  _provenance.py  _render.py  _render_helpers.py  _truncation.py  _types.py  _write.py  _xml.py  cli.py
(+359 files in other folders)
