[project]
name = "ai-pipeline-core"
version = "0.23.7"
description = "Core utilities for AI-powered processing pipelines using prefect"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
authors = [
    {name = "ResearchTech Inc.", email = "bartosz@research.tech"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anyio>=4.0.0",
    "httpx>=0.28.1",
    "Jinja2>=3.1.6",
    "openai>=2.16.0",
    "Pillow>=12.1.0",
    "prefect==3.6.22",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "pypdf>=5.0.0",
    "python-magic>=0.4.27",
    "ruamel.yaml>=0.19.1",
    "sentry-sdk>=2.0",
    "tiktoken>=0.12.0",
    "clickhouse-connect[async]==1.0.1",
    "prefect-gcp>=0.6.15",
    "google-cloud-pubsub>=2.0",
]

[project.scripts]
ai-prompt-compiler = "ai_pipeline_core.prompt_compiler.cli:main"
ai-pipeline-deploy = "ai_pipeline_core.deployment.deploy:main"
ai-replay = "ai_pipeline_core.replay.cli:main"
ai-trace = "ai_pipeline_core.observability.cli:main"

[project.urls]
Homepage = "https://github.com/researchtech-inc/ai-pipeline-core"
Repository = "https://github.com/researchtech-inc/ai-pipeline-core"
Issues = "https://github.com/researchtech-inc/ai-pipeline-core/issues"

[project.optional-dependencies]
dev = [
    "basedpyright==1.37.3",
    "interrogate==1.7.0",
    "pre-commit>=4.3.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-testmon>=2.2.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.1",
    "ruff==0.15.6",
    "testcontainers[clickhouse,google]>=4.0.0",
    "vulture==2.14",
    "pylint>=3.0.0",
    "ai-dev-cli==0.2.0",
]
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
strict = true
testpaths = ["tests"]
markers = [
    "ai_docs: marks tests that are suitable as documentation examples",
    "asyncio: opt-in async test",
    "serial: opt out of xdist for process-stateful tests",
    "xdist_group: group tests on the same xdist worker",
]
filterwarnings = [
    "ignore:The 'u' type code is deprecated and will be removed in Python 3.16:DeprecationWarning",
    # testcontainers.clickhouse still uses the deprecated wait_container_is_ready decorator until upstream migrates to structured wait strategies.
    "ignore:The @wait_container_is_ready decorator is deprecated and will be removed in a future version.*:DeprecationWarning:testcontainers\\.clickhouse",
]

[tool.coverage.run]
source = ["ai_pipeline_core"]
omit = ["*/tests/*", "*/test_*.py"]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = ".tmp/dev-runs/coverage-html"

[tool.ruff]
# Configuration for the Ruff linter and formatter
line-length = 120
target-version = "py314"
preview = true  # Required for DOC (pydoclint-derived) rules
exclude = [".tmp", "build", "dist", ".venv", "venv", "__pycache__", "scripts"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort
    "TID",     # flake8-tidy-imports (was TID252 only — now full TID to enable TID251 banned-api)
    "T20",     # print detection
    "D",       # pydocstyle
    "DOC",     # pydoclint
    "B",       # flake8-bugbear — mutable defaults, loop var capture
    "SIM",     # flake8-simplify — redundant control flow
    "ARG",     # flake8-unused-arguments
    "RUF",     # ruff-specific — RUF012 mutable class attrs, RUF100 unused noqa
    "UP",      # pyupgrade — Python 3.14+ idioms
    "PERF",    # perflint — performance anti-patterns
    "C4",      # flake8-comprehensions
    "FBT",     # flake8-boolean-trap
    "S",       # flake8-bandit — security baseline
    "C90",     # mccabe complexity
    "PT",      # flake8-pytest-style
    "PLC",     # pylint conventions (subsumes PLC0415)
    "PLE",     # pylint errors
    "PLW",     # pylint warnings
    "PLR",     # pylint refactoring
    "PIE",     # flake8-pie
    "RET",     # flake8-return
    "A",       # flake8-builtins — shadowing builtins
    "ASYNC",   # flake8-async — blocking calls in async
    "TRY",     # tryceratops — exception patterns
    "BLE",     # blind-except — catches 'except Exception:' without logging/re-raising
]
ignore = [
    "DOC201", "DOC501", "DOC502", "D105",
    "S101",    # assert used — intentional in non-test code
    "RET504",  # unnecessary variable before return — readability preference
    "ARG002",  # unused method argument — Pydantic validators have required signatures
    "FBT001",  # boolean positional arg — too strict for internal helpers
    "PLR2004", # magic value in comparison — domain thresholds are clearer inline
    "PLR0913", # too many arguments — some constructors legitimately need many params
    "TRY003",  # long exception messages — project uses detailed errors by design
    "D102",    # Protocol methods — documented by class docstring
    "D107",    # __init__ docstring — interrogate handles with ignore-init-method (3/3)
    "D417",    # missing arg descriptions — type hints suffice (3/3)
    "SIM108",  # ternary — reduces readability for multi-line (3/3)
    "C420",    # dict.fromkeys — mutable default trap with adjacent code (2-1)
    "TRY301",  # abstract raise — raise IS the validation in try/except (2-1)
    "TRY300",  # move to else — changes error handling semantics (2-1)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-public-methods = 30

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T20", "D", "DOC", "PLC0415", "PLC1901", "PLC2701", "S", "ARG", "FBT", "PLW", "PLR", "TRY", "SIM", "ASYNC", "C4", "B017", "B018", "E402", "I001", "PT011", "PT012", "PT017", "PT018", "RUF012", "RUF015", "RUF029", "RUF059", "RUF069", "TID251", "A002"]
"benchmarks/**/*.py" = ["T20", "D", "DOC", "PLC0415", "PLC1901", "PLC2701", "S", "ARG", "FBT", "PLW", "PLR", "TRY", "SIM", "ASYNC", "C4", "B017", "B018", "E402", "I001", "PT011", "PT012", "PT017", "PT018", "RUF012", "RUF015", "RUF029", "RUF059", "RUF069", "TID251", "A002"]
"examples/**/*.py" = ["D", "DOC", "PLC0415", "PLC2701", "S", "ARG", "T20", "RUF029", "C901", "PLR0914", "PLR0915", "PLR6301", "A002"]
"dependencies_docs/**/*.py" = ["D", "DOC", "PLC0415"]
".vulture_whitelist.py" = ["B018", "E402", "F401", "F821", "D", "PLC2701"]
"ai_pipeline_core/__init__.py" = ["RUF067", "TID251"]
"ai_pipeline_core/providers.py" = ["PLR6301"]
"ai_pipeline_core/testing.py" = ["TID251"]
"ai_pipeline_core/deployment/_cli.py" = ["TID251", "PLR0912", "PLR0914", "PLR0915", "UP047"]
"ai_pipeline_core/deployment/_helpers.py" = ["PLC0415", "BLE001"]
"ai_pipeline_core/prompt_compiler/cli.py" = ["T201", "C901", "PLR0912", "PLR0915", "TID251"]
"ai_pipeline_core/deployment/base.py" = ["T20", "C901", "PLR0912", "PLR0914", "PLR0915", "PLR0917", "PLR6301", "PLC0415", "UP046", "BLE001", "TID251", "ARG001"]
"ai_pipeline_core/deployment/_prefect.py" = ["TID251", "BLE001", "PLR0917"]
"ai_pipeline_core/deployment/_deployment_runtime.py" = ["TID251"]
"ai_pipeline_core/pipeline/_flow.py" = ["TID251"]
"ai_pipeline_core/pipeline/limits.py" = ["BLE001", "ASYNC109", "TID251"]
"tests/unit/pipeline/test_limits.py" = ["PLC2801"]
"ai_pipeline_core/deployment/deploy.py" = ["T20", "PLC0415", "PLC2701", "S404", "S602", "S603", "ASYNC", "C901", "PLR0912", "BLE001", "TID251"]
"ai_pipeline_core/deployment/remote.py" = ["UP046", "UP047", "TID251", "BLE001", "PLC0415", "ARG001", "PLR0914", "PLR0915"]
"ai_pipeline_core/deployment/_pubsub.py" = ["BLE001"]
"ai_pipeline_core/documents/document.py" = ["PLR0904"]
"ai_pipeline_core/database/_factory.py" = ["F821", "PLC0415"]
"ai_pipeline_core/_codec.py" = ["PLR0911"]
"ai_pipeline_core/database/clickhouse/_backend.py" = ["S608", "BLE001", "PLR0904", "PLR0911", "PLR0912", "C901", "PLR6301", "PERF401"]
"ai_pipeline_core/database/clickhouse/_connection.py" = ["S608"]
"ai_pipeline_core/database/filesystem/_backend.py" = ["PLR0904", "PLR6301", "PERF401"]
"ai_pipeline_core/database/_memory.py" = ["PLR0904", "PLR6301", "RUF029", "PERF401"]
"ai_pipeline_core/database/snapshot/_summary.py" = ["PLR6301", "PLR0912", "PLR0914", "PLR0917", "PERF401"]
"ai_pipeline_core/database/_documents.py" = ["PLC0415", "PERF401"]
"ai_pipeline_core/_llm_core/client.py" = ["PLR0911", "C901", "PLR0912", "PLR0915", "PLR0914", "PLR1702", "RUF005", "PLC2801", "UP047", "BLE001"]
"ai_pipeline_core/_llm_core/model_response.py" = ["UP046", "PLR6301", "PERF403", "BLE001"]
"ai_pipeline_core/llm/__init__.py" = ["TID252"]
"ai_pipeline_core/llm/tools.py" = ["A002"]  # execute(self, input) — intentional API matching OpenAI tool convention
"ai_pipeline_core/llm/_tool_loop.py" = ["BLE001"]  # tools are user code that can throw any exception
"ai_pipeline_core/llm/conversation.py" = ["RUF005", "PERF401", "FBT002", "UP035", "UP046", "PLC0415", "PLC2801", "PLR6301", "C901", "PLR0912", "PLR0914", "PLR0915", "PLR0917", "TID252", "BLE001"]
"ai_pipeline_core/llm/_substitutor.py" = ["BLE001", "C901", "PLR0911", "PLR0912", "PLR0914"]
"ai_pipeline_core/deployment/_resolve.py" = ["PLC0415", "C901", "PLR0915", "BLE001"]
"ai_pipeline_core/_llm_core/_validation.py" = ["BLE001"]
"ai_pipeline_core/llm/_images.py" = ["PLR0917", "BLE001"]
"ai_pipeline_core/pipeline/_task.py" = ["ARG003", "PLR0914", "PLR0915", "PLC2801", "TID251"]
"ai_pipeline_core/pipeline/_type_validation.py" = ["BLE001"]
"ai_pipeline_core/deployment/_types.py" = ["RUF029"]
"ai_pipeline_core/replay/types.py" = ["PLC0415"]
"ai_pipeline_core/replay/_execute.py" = ["PLC0415"]
"ai_pipeline_core/replay/cli.py" = ["T201", "BLE001"]
"ai_pipeline_core/observability/cli.py" = ["T201", "BLE001", "PLC0415", "PLR0911", "PLR0914"]
"tools/trace-inspector/**/*.py" = ["T20", "D", "DOC", "TID251", "S", "ARG", "PLR", "PLC0415", "PLC2701", "PERF", "RUF059"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

[tool.ruff.lint.flake8-tidy-imports]
# Enforce relative imports within the same package
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"warnings".msg = "Use logging.getLogger(__name__).warning() instead of import warnings"
"prefect".msg = "Do not import Prefect directly. Use ai_pipeline_core.pipeline and ai_pipeline_core.deployment instead."
"prefect.testing.utilities.prefect_test_harness".msg = "Do not use prefect_test_harness in tests — it is already provided as a session-scoped fixture in tests/conftest.py. Each call starts a new Prefect server (~4s). Use the session fixture instead."

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.interrogate]
fail-under = 100
verbose = 1
exclude = ["tests", "examples", ".venv", "venv", "build", "dist", "ai_pipeline_core/_*.py", "ai_pipeline_core/**/_*.py"]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
ignore-module = false
ignore-nested-functions = true
ignore-nested-classes = true
ignore-overloaded-functions = true
ignore-private = true
ignore-property-decorators = true
ignore-semiprivate = true
ignore-setters = true

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["ai_pipeline_core", "tools/trace-inspector/trace_inspector"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "venv",
    "env",
    ".git",
    "build",
    "dist",
]
reportMissingImports = true
reportMissingTypeStubs = "warning"
reportUndefinedVariable = true
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
# Keep at "warning" — reportUnknown* are noisy due to third-party libs
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportAny = "information"
reportPrivateUsage = false
# New rules
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnusedExpression = "error"
reportUnreachable = "error"
reportDeprecated = "warning"
reportUnusedCoroutine = "error"
reportImplicitStringConcatenation = false

[tool.pylint.SIMILARITIES]
min-similarity-lines = 10
ignore-imports = true
ignore-comments = true
ignore-docstrings = true
ignore-signatures = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_pipeline_core"]
include = [
  "ai_pipeline_core/py.typed",
  "ai_pipeline_core/**/*.yml",
  "ai_pipeline_core/**/*.jinja2",
]

[tool.hatch.build.targets.sdist]
include = [
    "ai_pipeline_core/**/*.py",
    "ai_pipeline_core/py.typed",
    "ai_pipeline_core/**/*.yml",
    "ai_pipeline_core/**/*.jinja2",
    "tests/**/*.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.uv.workspace]
members = ["tools/trace-inspector"]

[tool.dev-cli]
schema_version = 1
cache_dir = ".tmp/dev-runs"
tracked_extensions = [".py", ".toml", ".yml", ".yaml", ".json"]
runner = "auto"
test_roots = ["tests"]
source_packages = ["ai_pipeline_core"]
replace_auto_checks = false

[tool.dev-cli.pytest_plugin]
enabled = true

[tool.dev-cli.step_timeouts]
lint = 300
typecheck = 300
deadcode = 300
semgrep = 600
docstrings = 300
test_validator = 120

[tool.dev-cli.hash]
globs = [
    "examples/**/*.py",
    "examples/manifest.yml",
    "benchmarks/**/*.py",
    "tests/conftest.py",
    "tests/support/**/*.py",
    ".semgrep/*.yml",
    "pyrightconfig*.json",
    "tools/trace-inspector/**/*.py",
]
files = ["pyproject.toml", ".vulture_whitelist.py"]
optional_files = [
    ".env",
    ".tmp/production-server-v2/services/litellm/litellm.yaml",
    "litellm.yaml",
]

[tool.dev-cli.lanes.unit]
paths = ["tests/unit"]
xdist = ["-n", "auto", "--dist", "worksteal"]
timeout = 30
slow_threshold = 30
testmon = true
agent_allowed = true

[tool.dev-cli.lanes.integration]
paths = ["tests/integration"]
xdist = ["-n", "4", "--dist", "loadfile"]
timeout = 180
slow_threshold = 120
testmon = true
agent_allowed = true
blast_radius_ratio = 0.5

[tool.dev-cli.lanes.qualification]
paths = ["tests/qualification"]
xdist = ["-n", "2"]
timeout = 900
testmon = false
agent_allowed = true

[tool.dev-cli.examples]
enabled = true
static_path = "examples/tests/test_static.py"
smoke_path = "examples/tests/test_smoke.py"
path_lane = "unit"

[tool.dev-cli.benchmark]
enabled = true
target = "benchmarks/llm_matrix/"
run_env = { RUN_BENCHMARK = "1" }
tier_env = "BENCHMARK_TIER"
cases_env = "BENCHMARK_CASE_GLOB"
tiers = ["full", "nightly"]
smoke_tier = "smoke"

[tool.dev-cli.probes.capabilities]
enabled = true
target = "tests/capabilities"
agent_allowed = true
timeout = 900

[tool.dev-cli.verify]
enabled = true
steps = [
    { command = "check" },
    { command = "test", lane = "integration" },
    { command = "examples", mode = "smoke" },
]

[tool.dev-cli.infrastructure]
integration = { env = ["OPENAI_API_KEY", "OPENAI_BASE_URL"], label = "LLM API" }
docker = { command = "docker info", label = "Docker" }

[tool.dev-cli.hook]
disable = []

[[tool.dev-cli.checks]]
name = "test-validator"
description = "AI Pipeline Core test authoring validator"
run = [["python", "-m", "ai_pipeline_core._dev_extensions._test_validator"]]
position = "after:semgrep"
cacheable = false

[tool.dev-cli.scopes]
_llm_core = "tests/unit/_llm_core"
_pydantic_base = "tests/unit/_pydantic_base"
codec = "tests/unit/codec"
database = "tests/unit/database"
deployment = "tests/unit/deployment"
documents = "tests/unit/documents"
examples = "examples/tests"
exceptions = "tests/unit/exceptions"
images = "tests/unit/images"
integration = "tests/integration"
integration_database = "tests/integration/database"
integration_llm = "tests/integration/llm"
integration_replay = "tests/integration/replay"
llm = "tests/unit/llm"
logging = "tests/unit/logging"
observability = "tests/unit/observability"
pipeline = "tests/unit/pipeline"
prompt_compiler = "tests/unit/prompt_compiler"
prompt_contract = "tests/unit/prompt_contract"
providers = "tests/unit/providers"
pubsub = "tests/integration/pubsub"
qualification = "tests/qualification"
replay = "tests/unit/replay"
settings = "tests/unit/settings"
unit = "tests/unit"

[tool.dev-cli.source_to_test]
"ai_pipeline_core/_codec.py" = ["tests/unit/codec"]
"ai_pipeline_core/_pydantic_base.py" = ["tests/unit/_pydantic_base"]
"ai_pipeline_core/_llm_core" = [
    "tests/unit/_llm_core",
    "tests/unit/llm",
    "tests/integration/llm",
    "tests/qualification/llm",
]
"ai_pipeline_core/database" = ["tests/unit/database", "tests/integration/database"]
"ai_pipeline_core/deployment" = ["tests/unit/deployment", "tests/integration/pubsub"]
"ai_pipeline_core/documents" = ["tests/unit/documents"]
"ai_pipeline_core/llm" = [
    "tests/unit/llm",
    "tests/integration/llm",
    "tests/qualification/llm",
]
"ai_pipeline_core/logger" = ["tests/unit/logging"]
"ai_pipeline_core/observability" = ["tests/unit/observability"]
"ai_pipeline_core/pipeline" = ["tests/unit/pipeline"]
"ai_pipeline_core/prompt_compiler" = ["tests/unit/prompt_compiler", "examples/tests"]
"ai_pipeline_core/prompt_contract" = ["tests/unit/prompt_contract", "tests/integration/llm"]
"ai_pipeline_core/providers.py" = ["tests/unit/providers"]
"ai_pipeline_core/replay" = ["tests/unit/replay", "tests/integration/replay"]
"ai_pipeline_core/settings.py" = ["tests/unit/settings", "tests/integration"]

[tool.uv.sources]
trace-inspector = { workspace = true }
ai-pipeline-core = { workspace = true }
