[project]
name = "trace-inspector"
version = "0.1.0"
description = "Trace inspection and markdown bundle generation for ai-pipeline-core runs"
requires-python = ">=3.14"
dependencies = [
    "ai-pipeline-core",
    "pydantic>=2.12.5",
]

[project.scripts]
ai-trace-inspect = "trace_inspector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trace_inspector"]
